# final-project-OOCT-AD2025

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  main.cpp
colorLib/: parentTerminal.cpp  parentTerminal.h
lib/: _globals.cpp  _globals.h  customer.cpp  customer.h  orders.cpp  orders.h  preamble.cpp  preamble.h  product.cpp  product.h
